# b2024r

./: 1  Cargo.toml  multithread.R  multithread.sh  rustfmt.toml
.cargo/: config.toml
benchmark_results/: all_promotions_disabled.txt  all_promotions_enabled.txt  promotions_disabled.txt  promotions_enabled.txt
benchmark_results/fdl/: promotions_disabled.txt  promotions_enabled.txt
btree/: Cargo.toml  build.rs
btree/benches/: criterion.rs  multithread.rs  my_benchmark.rs
btree/src/: KeySource.rs  basic_node.rs  byte_slice.rs  key_source.rs  lib.rs  node.rs  page.rs  page_id.rs  test_util.rs  tree.rs
btree/tests/: btree.rs
dev_utils/: Cargo.toml
dev_utils/src/: keyset_generator.rs  lib.rs  tree_utils.rs  word1000.txt
seqlock/: Cargo.toml
seqlock/src/: asm_read.rs  asm_x86_impl.rs  atomic_byte_impl.rs  default_bm.rs  lib.rs  lock.rs  unwind.rs  wrappable.rs
seqlock/src/access_impl/: asm_read.rs  atomic_byte.rs  extreme_ub.rs  mod.rs  ref_impl.rs  unsafe_mix.rs
seqlock/tests/: mem_functions.rs
seqlock2/: Cargo.toml
seqlock2/src/: atomic_byte_impl.rs  lib.rs  seqlock_safe.rs  wrappable.rs
seqlock_access/: Cargo.toml
seqlock_access/src/: asm_x86_impl.rs  atomic_byte_impl.rs  lib.rs  lock.rs
seqlock_access/tests/: mem_functions.rs
seqlock_macros/: Cargo.toml
seqlock_macros/src/: lib.rs
seqlock_old/src/: atomic_byte_impl.rs
seqlock_old/tests/: mem_functions.rs
src/: access_impl.rs  asm_x86_impl.rs  atomic_byte_impl.rs  lib.rs  main.rs
tests/: mem_functions.rs
umolc/: Cargo.toml
umolc/src/: buffer_manager.rs  cast.rs  lib.rs  o_ptr.rs  optimistic_error.rs  seqlock.rs  unwind.rs
umolc_btree/: Cargo.toml  build.rs
umolc_btree/benches/: multithread.rs  promotion_benches.rs
umolc_btree/src/: basic_node.rs  fully_dense_leaf.rs  hash_leaf.rs  heap_node.rs  key_source.rs  lib.rs  node.rs  tree.rs  util.rs
umolc_btree/src/fully_dense_leaf/: insert_resolver.rs
umolc_btree/tests/: batch_ops.rs  btree.rs  multithread_tests.rs  promotion_test.rs  scan_tests.rs
