[package]
name = "btree"
version = "0.1.0"
edition = "2021"

[dependencies]
seqlock = {path = "../seqlock" }
indxvec = "1.9"
bytemuck = { version = "1.15.0",features = ["derive"] }
rand = { version = "0.8.5",features = ["small_rng"] }
bstr = "1.9.1"
itertools = "0.12.1"

[dev-dependencies]
random_word = { version = "0.4.3",features = ["en"] }
rayon = "1.10.0"
criterion = "0.5.1"
dev_utils = {path = "../dev_utils"}
rip_shuffle = "0.2.0"

[[bench]]
name="my_benchmark"
harness = false