[package]
name = "dev_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = {version = "0.8.5",features = ["small_rng"]}
rayon = "1.10.0"
perf-event = {version = "0.4.8"}
serde_json = {version = "1.0.117"}
pfm = "0.1.2"
minstant = "0.1.7"
zipf="7.0.1"
rip_shuffle = "0.2.0"
umolc = {path = "../umolc"}
umolc_btree = {path = "../umolc_btree"}
fastrand = "2.3.0"