[package]
name = "seqlock"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.15.0",features = ["min_const_generics"]}
seqlock_macros = {path = "../seqlock_macros"}

[dev-dependencies]
rand = {version = "0.8.5",features = ["small_rng"]}

[features]
default=["impl_asm_read"]
impl_asm_read=[]
impl_atomic_byte=[]