[package]
name = "seqlock"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.15.0",features = ["min_const_generics"]}
seqlock_macros = {path = "../seqlock_macros"}
radium = "1.1.0"
libc = "0.2.155"

[dev-dependencies]
rand = {version = "0.8.5",features = ["small_rng"]}

[features]
default=[]
impl_asm_read=[]
impl_atomic_byte=[]
impl_ub=[]
impl_extreme_ub=[]