[package]
name = "umolc_btree"
version = "0.1.0"
edition = "2021"

[dependencies]
umolc = {path = "../umolc"}
bytemuck = { version = "1.19.0",features = ["derive","min_const_generics"] }
as_base = "0.1.3"
extend = "1.2.0"
static_assertions = "1.1.0"
bstr = "1.10.0"
itertools = "0.13.0"
indxvec = "1.9.6"

[dev-dependencies]
dev_utils = {path = "../dev_utils"}
rand = "0.8.5"
rayon = "1.10.0"
rip_shuffle = "0.2.0"


[build-dependencies]
git2 = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[features]
default = ["page_4k"]
validate_node=[]
validate_tree=[]
page_4k=[]
page_1k=[]


[[bench]]
name="multithread"
harness = false